Bug 96444 - Style shortcuts disappear in menu bar
Summary: Style shortcuts disappear in menu bar
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.1.0.0.beta1
Hardware: All All
: medium minor
Assignee: Yousuf Philips (jay) (retired)
URL:
Whiteboard: target:5.2.0 target:5.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-12 15:03 UTC by Yousuf Philips (jay) (retired)
Modified: 2017-05-14 11:12 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2015-12-12 15:03:33 UTC
Steps:
1) Open Writer
2) Open the Styles menu and notice that headings 1 to 4 have shortcuts
3) Close the Styles menu and open it again and the shortcuts are gone

Version: 5.1.0.0.beta2+
Build ID: 82b0bf45d0527db84e11689dc8a15eefaa699409
Threads 2; Ver: 3.13; Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:libreoffice-5-1, Time: 2015-12-05_10:03:38
Locale: en-US (en_US.UTF-8)
Comment 1 Buovjaga 2015-12-16 09:43:47 UTC
Repro.

Win 7 Pro 64-bit Version: 5.2.0.0.alpha0+
Build ID: 014633f83e44ae8ba33087b6f38e8e253e281969
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-12-15_06:21:44
Locale: fi-FI (fi_FI)
Comment 2 Maxim Monastirsky 2016-02-09 20:59:51 UTC
The problem is apparently with spaces in command names. Replacing spaces with %20 should do the trick, i.e.

.uno:StyleApply?Style:string=Heading 1 ...

should be changed to:

.uno:StyleApply?Style:string=Heading%201

@Jay: Could you take care of it?
Comment 3 Yousuf Philips (jay) (retired) 2016-02-10 10:57:35 UTC
(In reply to Maxim Monastirsky from comment #2)
> @Jay: Could you take care of it?

@Maxim: Done. Please review and see if it is fine.

https://gerrit.libreoffice.org/22265
Comment 4 Commit Notification 2016-02-11 22:00:18 UTC
Yousuf Philips committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=939abe5a79674525ce134637947fe424a7e2332a

tdf#96444 Replace chr(20) with '%20' in style uno commands

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Maxim Monastirsky 2016-02-11 22:05:46 UTC
As this changes command names, we have to inform translators before pushing this to 5-1.
Comment 6 Yousuf Philips (jay) (retired) 2016-02-12 11:53:49 UTC
(In reply to Maxim Monastirsky from comment #5)
> As this changes command names, we have to inform translators before pushing
> this to 5-1.

If i remember correctly, there was a means of making changes without triggering the need for retranslation. @Cloph: Any ideas how that is possible?
Comment 7 Christian Lohmaier 2016-02-12 12:55:42 UTC
the change to WriterCommads.xcu is the one that's translation relevant. It changes the context-part of the translations and as such could be applied automatically.

PS: 
I'd prefer a more telling commit summary for those changes. it is obvious that you replace space (but not a string "chr(20)" for that matter) with the escaped form, but to know why you did requires visiting the bug. If possible, the commit message should tell what the change does (and why), not necessarily how.
Comment 8 Commit Notification 2017-05-14 11:12:08 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b2bed3ef5ef29b895d362dcc493b3e274eca17eb

Revert "tdf#96444 Replace chr(20) with '%20' in style uno commands"

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2017-05-14 11:12:44 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b769152dcafe2b12bd820587036cced0ec49ec4f

tdf#96444 Shortcuts are saved with non-parsed URL

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.