tdf#96444 Shortcuts are saved with non-parsed URL

MenuBarManager overwrites the item URL with the parsed
version. This causes the keyboard shortcuts of style
commands to no longer be found on subsequent opening of
the menu, because they have spaces, which in the parsed
version were replaced with "%20".

Change-Id: I80b559203742922f70b7cec54b5a5ae57d3ef7dd